--- a/app/views/cec/_form.html.erb
+++ b/app/views/cec/_form.html.erb
@@ -16,8 +16,9 @@
 
   <div><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></div>
-
+  <div>
   <% f.label :role %><br />
-  <% f.text_field :role,:value => "L", :autofocus => true %>
+  <%= f.hidden_field :role,:value => "L", :autofocus => true %>
+  </div>
   <%=f.submit "Save", :class => "btn btn-primary", remote:true %>
 <%end%>
